@@ -1,4 +1,4 @@
-"ABBREVIATE_CHART_LABELS";"Afgekorte veldtitels"
+﻿"ABBREVIATE_CHART_LABELS";"Afgekorte veldtitels"
 "ALLOW_CHANGE_GEDCOM";"Sta wisselen van GEDCOM-bestand toe"
 "ALLOW_EDIT_GEDCOM";"Sta wijzigen toe"
 "ALLOW_REMEMBER_ME";"Toon "Onthoudt mij" op inlogpagina"
@@ -630,7 +630,7 @@
 "default";"Standaard"
 "default_form";"Plaats, Gemeente, Provincie/Staat, Land"
 "default_form_info";"(Standaard)"
-"default_news_text";"De informatie op deze website wordt beschikbaar gemaakt met behulp van <a href="http://www.Genmod.net/" target="_blank">Genmod  #VERSION#</a>. Deze pagina geeft een introductie in en overzicht over deze genealogie. U kunt een van de overzichten kiezen uit het menu, de details van personen bekijken, of op naam of plaats zoeken.<br /><br />Als u problemen heeft met het gebruik van Genmod, kijk dan in het helpmenu voor meer informatie over de pagina waarop u zich bevindt.<br /><br />Dank voor uw bezoek!"
+"default_news_text";"De informatie op deze website wordt beschikbaar gemaakt met behulp van <a href="http://sourceforge.net/projects/genmod/" target="_blank">Genmod  #VERSION#</a>. Deze pagina geeft een introductie in en overzicht over deze genealogie. U kunt een van de overzichten kiezen uit het menu, de details van personen bekijken, of op naam of plaats zoeken.<br /><br />Als u problemen heeft met het gebruik van Genmod, kijk dan in het helpmenu voor meer informatie over de pagina waarop u zich bevindt.<br /><br />Dank voor uw bezoek!"
 "default_news_title";"Welkom bij uw genealogie"
 "default_user";"Aanmaken van de beheerder."
 "definitions";"Definities"
@@ -2267,8 +2267,8 @@
 "total_repositories";"Aantal bewaarplaatsen"
 "total_sources";"Aantal bronnen"
 "total_unic_places";"Aantal unieke locaties"
-"translation_forum";"Vertalersforum op Genmod.net"
-"translation_forum_desc";"Deze <a href="http://www.genmod.net/forum/viewforum.php?f=4" target=_blank><b>koppeling</b></a> opent een nieuw venster in uw Internet Verkenner, naar het vertalerforum van Genmod. Hier kunt u vragen stellen over vertalingen, problemen voorleggen en (als u wilt) u aanmelden voor het leveren van een bijdrage aan de vertalingen.<br />Als u moeite heeft met de Engelse taal, dan kunt u uw bericht in het Nederlands stellen.<br /><br />"
+"translation_forum";"Vertalersforum op Genmod"
+"translation_forum_desc";"Deze <a href="http://sourceforge.net/projects/genmod" target=_blank><b>koppeling</b></a> opent een nieuw venster in uw Internet Verkenner, naar het vertalerforum van Genmod. Hier kunt u vragen stellen over vertalingen, problemen voorleggen en (als u wilt) u aanmelden voor het leveren van een bijdrage aan de vertalingen.<br />Als u moeite heeft met de Engelse taal, dan kunt u uw bericht in het Nederlands stellen.<br /><br />"
 "translator_tools";"Beheer taalbestanden"
 "tuesday";"Dinsdag"
 "tuesday_1st";"Di"
